--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
-<head>
- <link rel="stylesheet href="styles.css">
-</head>
+h1 {
+ color: blueviolet;
+ background-color: black;
+}
+
+p {
+ color: maroon;
+font-family: Georgia
+}
+
+
